[tool.poetry]
name = "unifont_utils"
version = "0.5.2"
description = "Unifont Utilities, but rewritten in Python."
authors = ["SkyEye_FAST <skyeyefast@foxmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.rst"
repository = "https://github.com/SkyEye-FAST/unifont_utils"
keywords = ["unifont"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Natural Language :: Chinese (Simplified)",
    "Topic :: Text Processing :: Fonts",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pillow = ">=10.0"
textual = ">=0.80.0"
click = ">=8.1.0"

[tool.poetry.scripts]
unipie = 'unifont_utils.console:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
