[project]
name = "unifont_utils"
version = "0.5.4"
description = "Unifont Utilities, but rewritten in Python."
authors = [{ name = "SkyEye_FAST", email = "skyeyefast@foxmail.com" }]
requires-python = ">=3.9,<4.0"
readme = "README.rst"
license = "GPL-3.0-or-later"
keywords = ["unifont"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Natural Language :: Chinese (Simplified)",
    "Topic :: Text Processing :: Fonts",
    "Topic :: Utilities",
]
dependencies = [
    "pillow>=10.0",
    "textual>=0.80.0",
    "click>=8.1.0",
]

[project.urls]
Repository = "https://github.com/SkyEye-FAST/unifont_utils"

[project.scripts]
unipie = "unifont_utils.console:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
