[project]
name = "unifont_utils"
version = "0.6.0"
description = "Unifont Utilities, but rewritten in Python."
authors = [{ name = "SkyEye_FAST", email = "skyeyefast@foxmail.com" }]
requires-python = ">=3.10,<4.0"
readme = "README.rst"
license = "GPL-3.0-or-later"
keywords = ["unifont"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Natural Language :: Chinese (Simplified)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: Fonts",
    "Topic :: Utilities",
]
dependencies = [
    "pillow>=10.0",
    "textual>=0.80.0",
    "click>=8.1.0",
    "requests>=2.31",
]

[project.urls]
Repository = "https://github.com/SkyEye-FAST/unifont_utils"

[project.scripts]
unipie = "unifont_utils.console:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.4.2"]

[tool.hatch.build]
exclude = ["/tests", "/README.md", "/README_zh.md", "/ruff.toml"]
